--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="marron">#A52A2A</color>
     <color name="azulOscuro">#191970</color>
 
+    <color name="igp">#1C2F59</color>
 
     <color name="gris">#cfd8dc</color>
 
